--- a/caseTracker.ipynb
+++ b/caseTracker.ipynb
@@ -6,7 +6,7 @@
       "name": "caseTracker.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyM58DEtyJntcfQ1GJruI205",
+      "authorship_tag": "ABX9TyMh3JhJ7doBhFTt80R8vDC5",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -33,7 +33,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "cellView": "form",
-        "outputId": "ca6246ac-2e5b-42b8-8d2b-00d217daaa1b"
+        "outputId": "f31db9f0-ed2f-412a-ece1-5b8ef26d2b2c"
       },
       "source": [
         "#@title\n",
@@ -56,7 +56,7 @@
         "# titles_list = gc.open('Copy of Hongwei Dong lab case tracker.xlsx').worksheets()\n",
         "# print(titles_list)"
       ],
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
@@ -81,7 +81,7 @@
         "  worksheet = gc.open('Copy of Hongwei Dong lab case tracker.xlsx').worksheet(k)\n",
         "  tabs[k] = pd.DataFrame(worksheet.get_all_values())  "
       ],
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -91,7 +91,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "DhmozCeaPnwt",
-        "outputId": "6743c4c1-93c1-4a6a-91a5-0dfdcb3e0e63"
+        "outputId": "b3dac2a3-810a-4568-f342-373d4154380d"
       },
       "source": [
         "distinctCases = pd.DataFrame()\n",
@@ -170,16 +170,16 @@
         "df.to_csv('/allColumns.csv')\n",
         "print('/allColumns.csv')"
       ],
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Distinct cases: 1869\n",
+            "Distinct cases: 1895\n",
             "/distinctCases.csv\n",
-            "Total tracers: 7575\n",
+            "Total tracers: 7595\n",
             "/tracersPathways.csv\n",
-            "Total injections: 6690\n",
+            "Total injections: 6696\n",
             "/actualInjections.csv\n",
             "/allColumns.csv\n"
           ],
@@ -204,14 +204,14 @@
         "cases = pd.Series(distinctCases.iloc[:,0])\n",
         "f = open(\"/casetracker.sql\", \"w\")\n",
         "\n",
-        "query = \"INSERT INTO organisms (species, strain, allele_type, gene_marker, description, code) VALUES ('mouse', 'Parvalbumin-Cre', 'transgenic', 'Parvalbumin (PV)', 'These mice selectively express Cre recombinase in PV expressing cells', 'P');\\n\"\n",
-        "query = query + \"INSERT INTO organisms (species, strain, allele_type, gene_marker, description, code) VALUES ('mouse', 'Vasoactive Intestinal Peptide-Cre', 'transgenic', 'Vasoactive Intestinal Peptide (VIP)', 'These mice selectively express Cre recombinase in VIP expressing cells', 'P');\\n\"\n",
+        "query = \"INSERT IGNORE INTO organisms (id, species, strain, allele_type, gene_marker, description, code) VALUES (17, 'mouse', 'Parvalbumin-Cre', 'transgenic', 'Parvalbumin (PV)', 'These mice selectively express Cre recombinase in PV expressing cells', 'P');\\n\"\n",
+        "query = query + \"INSERT IGNORE INTO organisms (id, species, strain, allele_type, gene_marker, description, code) VALUES (18, 'mouse', 'Vasoactive Intestinal Peptide-Cre', 'transgenic', 'Vasoactive Intestinal Peptide (VIP)', 'These mice selectively express Cre recombinase in VIP expressing cells', 'P');\\n\"\n",
         "query = query + \"INSERT INTO users(user_name, email, user_group, is_active) VALUES('Lei Gao', 'LeiGao@mednet.ucla.edu',4, 1 )ON DUPLICATE KEY UPDATE email='LeiGao@mednet.ucla.edu';\\n\"\n",
         "\n",
         "#insert into animals + tissueDissections\n",
         "for row in total.itertuples(index=False):\n",
-        "    casePrefix = row[0][:2]\n",
-        "    query = query + \"INSERT INTO animals (organism_id) SELECT \" + casePrefix + \"FROM tissueDissections WHERE NOT EXISTS(SELECT NULL FROM tissueDissections td WHERE td.tissue_code='\" + row[0] + \"') LIMIT 1;\\n\"\n",
+        "    casePrefix = get_organism_id(row[0][:2])\n",
+        "    query = query + \"INSERT INTO animals (organism_id) SELECT \" + str(casePrefix) + \" FROM tissueDissections WHERE NOT EXISTS(SELECT NULL FROM tissueDissections td WHERE td.tissue_code='\" + row[0] + \"') LIMIT 1;\\n\"\n",
         "    query = query + \"INSERT IGNORE INTO tissueDissections (tissue_code, tissue_name, description, animal_id) VALUES ('\" + row[0] +\"', 'brain', 'brain', LAST_INSERT_ID());\\n\"\n",
         "\n",
         "# insert into surgeries\n",
@@ -232,7 +232,7 @@
         "f.close()\n",
         "\n"
       ],
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": []
     }
   ]
