--- a/casetracker2.ipynb
+++ b/casetracker2.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNucZRMnMo8AIA5lZ6k2HJa",
+      "authorship_tag": "ABX9TyMJ1kuJpNurnLz2MkR8U7z/",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -36,7 +36,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "fd3c4713-f8ea-4a12-b782-434e3ec64d0b"
+        "outputId": "8f05f28c-bf6b-4022-9911-7740def54f59"
       },
       "source": [
         "import pandas as pd\n",
@@ -57,7 +57,7 @@
         "from oauth2client.client import GoogleCredentials\n",
         "gc = gspread.authorize(GoogleCredentials.get_application_default())"
       ],
-      "execution_count": null,
+      "execution_count": 94,
       "outputs": [
         {
           "output_type": "stream",
@@ -76,7 +76,7 @@
       "source": [
         "output_file = './u19_salk_parsed.json'"
       ],
-      "execution_count": null,
+      "execution_count": 95,
       "outputs": []
     },
     {
@@ -153,10 +153,10 @@
         "          \"vsi_path\", \"osp_path\", \"image_tech\", \"dimension\", \"registration\", \"threshold\",\n",
         "          \"overlap\", \"qa_by\")\n",
         "\n",
-        "COLUMNS = {'U19 CSHL': CSHL_COLS, 'U19 Salk Institute': U19_COLS, 'MCP': MCP_COLS, \n",
+        "COLUMNS = {'U01 ': U01_COLS, 'U19 CSHL': CSHL_COLS, 'U19 Salk Institute': U19_COLS, 'MCP': MCP_COLS, \n",
         "           'Basal Ganglia': BG_COLS, 'RF1 (HPF)': RF1_COLS, 'BLA project': BLA_COLS}\n",
         "\n",
-        "SKIPROWS = {'U19 CSHL': 8, 'U19 Salk Institute': 6, 'MCP': 7,\n",
+        "SKIPROWS = {'U01 ': 8, 'U19 CSHL': 8, 'U19 Salk Institute': 6, 'MCP': 7,\n",
         "            'Basal Ganglia': 6, 'RF1 (HPF)': 13, 'BLA project': 4}\n",
         "\n",
         "\n",
@@ -349,7 +349,7 @@
         "\n",
         "    return project_dict"
       ],
-      "execution_count": null,
+      "execution_count": 96,
       "outputs": []
     },
     {
@@ -360,11 +360,11 @@
       "source": [
         "def get_organism_id(argument):\n",
         "    switcher = {\n",
-        "        'SG': 7,\n",
-        "        'SP': 17,\n",
-        "        'SV': 18\n",
+        "        'SG': '7',\n",
+        "        'SP': '7',\n",
+        "        'SV': '18'\n",
         "    }\n",
-        "    return switcher.get(argument, 1)\n",
+        "    return switcher.get(argument, '1')\n",
         "  \n",
         "#Lin, Lei, Marlene, Kevin\n",
         "def get_usernames(argument):\n",
@@ -376,13 +376,17 @@
         "    }\n",
         "    return switcher.get(argument, \"Lin Gou\")"
       ],
-      "execution_count": null,
+      "execution_count": 97,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "2UQ3__liEcgS"
+        "id": "2UQ3__liEcgS",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "fdfa265f-144b-4259-883b-2cb25f77919b"
       },
       "source": [
         "TRACKERS = {}\n",
@@ -399,8 +403,22 @@
         "\n",
         "save_json(project)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 98,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "U01 \n",
+            "U19 CSHL\n",
+            "U19 Salk Institute\n",
+            "MCP\n",
+            "Basal Ganglia\n",
+            "RF1 (HPF)\n",
+            "BLA project\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -452,7 +470,7 @@
         "\n",
         "query = query + \"\\nDROP TRIGGER after_injectionSites_insert;\"\n",
         "f.write(query)\n",
-        "f.close()\n"
+        "f.close()"
       ],
       "execution_count": null,
       "outputs": []
